--- a/krisen-gemeinsam-bewaeltigen.html
+++ b/krisen-gemeinsam-bewaeltigen.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html lang="de"><head><meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Krisen gemeinsam bewältigen</title>
+<title>Müllzeit reduzieren</title>
 <style>
 body{font-family:sans-serif;line-height:1.6;max-width:700px;margin:2rem auto;padding:0 1rem;color:#222}
 h1{font-size:1.8rem;margin-bottom:0.5rem}
@@ -11,26 +11,30 @@ li{margin-bottom:.5rem}
 a{color:#00796b;text-decoration:none}
 a:hover{text-decoration:underline}
 </style></head><body>
-<h1>Krisen gemeinsam bewältigen</h1>
+<h1>Müllzeit reduzieren</h1>
 <h3>Einführung</h3>
-<p>Krisen können sowohl individuell als auch kollektiv belastend sein. In solchen Zeiten ist es entscheidend, eine unterstützende Haltung einzunehmen, die dir erlaubt, anderen beizustehen, ohne dich selbst zu überfordern. Die Fähigkeit, in Krisen belastbar zu bleiben und gleichzeitig empathisch und hilfreich zu sein, stärkt nicht nur die betroffene Person, sondern auch die Beziehung zwischen euch.</p>
+<p>„Müllzeit“ bezeichnet die Zeit, die wir mit unnötigen und ineffektiven Aktivitäten verschwenden, anstatt produktiv zu arbeiten. Diese Zeitfresser können in Form von sinnlosem Surfen im Internet, ständigen Unterbrechungen durch Benachrichtigungen oder endlosen Meetings auftreten. Wenn wir es schaffen, diese Müllzeit zu identifizieren und zu reduzieren, können wir unsere Produktivität erheblich steigern und unsere Ziele schneller erreichen. Das bedeutet, dass wir mehr Zeit für die wirklich wichtigen Aufgaben haben und unsere Energie gezielter einsetzen können. Indem du lernst, Müllzeit zu minimieren, kannst du deinen Tag effizienter gestalten und mehr erreichen.</p>
 <h3>Denkfragen</h3>
 <p>Diese Fragen können dir helfen, dich auf das Thema einzustimmen. Du kannst sie am Schluss mit deiner Lehrperson besprechen, sie sind aber freiwillig.</p>
 <ul>
-<li>Wann hast du das letzte Mal jemandem in einer Krise geholfen? Wie hast du dich dabei gefühlt?</li>
+<li>Welche Aktivitäten in deinem Alltag empfindest du als unnötig oder ineffektiv?</li>
 </ul>
 <ul>
-<li>Wie sorgst du dafür, dass du dich in Krisensituationen nicht selbst überforderst?</li>
+<li>Wie viel Zeit verbringst du täglich mit Tätigkeiten, die dir wenig Nutzen bringen?</li>
 </ul>
 <ul>
-<li>Warum ist es wichtig, in Krisen für andere da zu sein, ohne dabei die eigenen Grenzen zu überschreiten?</li>
+<li>Was könntest du tun, um diese „Müllzeit“ zu reduzieren und produktiver zu sein?</li>
 </ul>
 <h3>Tipps für die Internetrecherche</h3>
-<p>Um mehr darüber zu erfahren, wie du in Krisen unterstützen kannst, suche nach Begriffen wie „Krisenbewältigung im Team“, „in Krisen unterstützen“ oder „resilient in Krisensituationen bleiben“. Diese Suchbegriffe helfen dir, hilfreiche Informationen und Techniken zu finden.</p>
+<p>Um mehr darüber zu erfahren, wie du Müllzeit reduzieren kannst, suche nach Begriffen wie „Zeitfresser eliminieren“, „Müllzeit vermeiden“ oder „Effektiver arbeiten durch weniger Ablenkung“. Diese Suchbegriffe führen dich zu nützlichen Tipps und Strategien, die dir helfen, produktiver zu arbeiten.</p>
 <p>Hier noch Links zu interessanten Seiten oder Videos:</p>
 <ul>
-<li><a href="https://www.youtube.com/watch?v=O0CEM_4KUWI">Video: Unterstützung in Krisensituationen</a></li>
+<li><a href="https://www.youtube.com/watch?v=xhBTnzAs-h0">Video: Zeitfresser erkennen</a></li>
 </ul>
 <ul>
-<li>[Podcast: Krisen gemeinsam bewältigen](https://plus.rtl.de/podcast/so-bin-ich-eben-stefanie-stahls-psychologie-podcast-fuer-alle</li>
-</ul></body></html>
+<li><a href="https://www.youtube.com/watch?v=HDSSvqKPMnc">Video: Produktiver arbeiten</a></li>
+</ul>
+<ul>
+<li><a href="https://www.mit-kindern-lernen.ch/ich-selbst/lernplanung/179-muellzeit-reduzieren">Müllzeit reduzieren bei mit-kindern-lernen.ch</a></li>
+</ul>
+</body></html>
