--- a/index.html
+++ b/index.html
@@ -11,4 +11,128 @@ li{margin-bottom:.5rem}
 a{color:#00796b;text-decoration:none}
 a:hover{text-decoration:underline}
 </style></head><body>
-<h2>Inhaltsverzeichnis</h2><ul><li><a href="achtsamkeit-im-alltag-integrieren.html">Achtsamkeit im Alltag integrieren</a></li><li><a href="ai-gestuetzte-textueberarbeitung.html">AI-gestützte Textüberarbeitung</a></li><li><a href="aktives-zuhoeren-praktizieren.html">Aktives Zuhören praktizieren</a></li><li><a href="arbeiten-in-kurzen-einheiten.html">Arbeiten in kurzen Einheiten</a></li><li><a href="arbeitszeiten-festlegen-und-einhalten.html">Arbeitszeiten festlegen und einhalten</a></li><li><a href="auswirkung-von-stress-auf-die-gesundheit.html">Auswirkung von Stress auf die Gesundheit</a></li><li><a href="bewegung-und-fitness-fuer-den-alltag.html">Bewegung und Fitness für den Alltag</a></li><li><a href="beziehungen-aktiv-gestalten.html">Beziehungen aktiv gestalten</a></li><li><a href="brainstorming-techniken-zur-kreativen-problemloesung.html">Brainstorming-Techniken zur kreativen Problemlösung</a></li><li><a href="chunking-zur-informationsverarbeitung.html">Chunking zur Informationsverarbeitung</a></li><li><a href="cornell-methode-fuer-notizen.html">Cornell-Methode für Notizen</a></li><li><a href="datenschutz-im-internet.html">Datenschutz im Internet</a></li><li><a href="deine-emotionen-zeigen.html">Deine Emotionen zeigen</a></li><li><a href="deine-kraefte-und-zeit-clever-nutzen.html">Deine Kräfte und Zeit clever nutzen</a></li><li><a href="deine-meinung-sagen.html">Deine Meinung sagen</a></li><li><a href="deine-staerken-kennen.html">Deine Stärken kennen</a></li><li><a href="dranbleiben-auch-wenn-es-schwierig-wird.html">Dranbleiben, auch wenn es schwierig wird</a></li><li><a href="echt-sein.html">Echt sein</a></li><li><a href="effiziente-internetrecherche.html">Effiziente Internetrecherche</a></li><li><a href="eisenhower-matrix-anwenden.html">Eisenhower-Matrix anwenden</a></li><li><a href="emotionale-intelligenz-foerdern.html">Emotionale Intelligenz fördern</a></li><li><a href="emotionen-im-griff-haben.html">Emotionen im Griff haben</a></li><li><a href="entscheidungsbaum-zur-loesung-komplexer-probleme.html">Entscheidungsbaum zur Lösung komplexer Probleme</a></li><li><a href="entspannungstechniken-fuer-den-alltag.html">Entspannungstechniken für den Alltag</a></li><li><a href="entspannungsuebungen-vor-pruefungen.html">Entspannungsübungen vor Prüfungen</a></li><li><a href="ergebnisse-verkaufen.html">Ergebnisse verkaufen</a></li><li><a href="feedback-empfangen-und-nutzen.html">Feedback empfangen und nutzen</a></li><li><a href="feynman-methode-kennenlernen.html">Feynman-Methode kennenlernen</a></li><li><a href="freizeitaktivitaeten-zur-erholung.html">Freizeitaktivitäten zur Erholung</a></li><li><a href="gefuehle-anderer-wahrnehmen.html">Gefühle anderer wahrnehmen</a></li><li><a href="gefuehle-in-worte-fassen.html">Gefühle in Worte fassen</a></li><li><a href="gehmeditation-kennenlernen.html">Gehmeditation kennenlernen</a></li><li><a href="gemeinsam-entscheiden.html">Gemeinsam entscheiden</a></li><li><a href="gesunde-ernaehrung-fuer-konzentration.html">Gesunde Ernährung für Konzentration</a></li><li><a href="gewaltfreie-kommunikation-anwenden.html">Gewaltfreie Kommunikation anwenden</a></li><li><a href="gezielte-pausen-einplanen.html">Gezielte Pausen einplanen</a></li><li><a href="grenzen-respektieren.html">Grenzen respektieren</a></li><li><a href="hydration-und-mentale-leistung.html">Hydration und mentale Leistung</a></li><li><a href="inhalte-verstaendlich-strukturieren.html">Inhalte verständlich strukturieren</a></li><li><a href="konflikte-ansprechen.html">Konflikte ansprechen</a></li><li><a href="konfliktmanagement-im-team.html">Konfliktmanagement im Team</a></li><li><a href="konstruktives-feedback-geben.html">Konstruktives Feedback geben</a></li><li><a href="kreative-auszeiten-planen.html">Kreative Auszeiten planen</a></li><li><a href="krisen-gemeinsam-bewaeltigen.html">Krisen gemeinsam bewältigen</a></li><li><a href="kurzentspannungsuebungen-fuer-den-alltag.html">Kurzentspannungsübungen für den Alltag</a></li><li><a href="koerpersprache-verstehen.html">Körpersprache verstehen</a></li><li><a href="lampenfieber-reduzieren.html">Lampenfieber reduzieren</a></li><li><a href="lernstoff-gliedern.html">Lernstoff gliedern</a></li><li><a href="loci-methode-als-gedaechtnistechnik.html">Loci-Methode als Gedächtnistechnik</a></li><li><a href="mind-mapping-zur-visualisierung-von-ideen.html">Mind-Mapping zur Visualisierung von Ideen</a></li><li><a href="miteinander-fuehlen.html">Miteinander fühlen</a></li><li><a href="morgenrituale-fuer-mehr-motivation.html">Morgenrituale für mehr Motivation</a></li><li><a href="motivation-durch-vorbilder.html">Motivation durch Vorbilder</a></li><li><a href="mutig-neues-ausprobieren.html">Mutig Neues ausprobieren</a></li><li><a href="nein-sagen.html">Nein sagen</a></li><li><a href="neue-ideen-willkommen-heissen.html">Neue Ideen willkommen heissen</a></li><li><a href="nutzung-von-rechtschreibtools.html">Nutzung von Rechtschreibtools</a></li><li><a href="naehe-und-distanz-regulieren.html">Nähe und Distanz regulieren</a></li><li><a href="online-datenbanken-nutzen.html">Online-Datenbanken nutzen</a></li><li><a href="ordnung-halten.html">Ordnung halten</a></li><li><a href="pausen-sinnvoll-einplanen.html">Pausen sinnvoll einplanen</a></li><li><a href="perspektivuebernahme-ueben.html">Perspektivübernahme üben</a></li><li><a href="plan-b-entwickeln-fuer-den-fall-der-faelle.html">Plan B entwickeln für den Fall der Fälle</a></li><li><a href="positive-affirmationen-fuer-die-pruefungsangstbewaeltigung.html">Positive Affirmationen für die Prüfungsangstbewältigung</a></li><li><a href="pqrst-methode-fuer-besseres-textverstaendnis.html">PQRST-Methode für besseres Textverständnis</a></li><li><a href="prioritaeten-setzen-mit-der-abc-analyse.html">Prioritäten setzen mit der ABC-Analyse</a></li><li><a href="pro--und-contra-liste-zur-entscheidungsfindung.html">Pro- und Contra-Liste zur Entscheidungsfindung</a></li><li><a href="progressive-muskelentspannung.html">Progressive Muskelentspannung</a></li><li><a href="pruefungsstrategien-entwickeln.html">Prüfungsstrategien entwickeln</a></li><li><a href="regelmaessige-selbstreflexion-praktizieren.html">Regelmässige Selbstreflexion praktizieren</a></li><li><a href="risikomanagement-bei-entscheidungen.html">Risikomanagement bei Entscheidungen</a></li><li><a href="rollenverteilung-im-team.html">Rollenverteilung im Team</a></li><li><a href="scamper-methode-zur-problemloesung.html">SCAMPER-Methode zur Problemlösung</a></li><li><a href="schlafhygiene-verbessern.html">Schlafhygiene verbessern</a></li><li><a href="schnelllesetechniken-kennenlernen.html">Schnelllesetechniken kennenlernen</a></li><li><a href="schwaechen-zeigen.html">Schwächen zeigen</a></li><li><a href="selbstbelohnung-einsetzen.html">Selbstbelohnung einsetzen</a></li><li><a href="selbstbewusst-auftreten.html">Selbstbewusst auftreten</a></li><li><a href="sichere-passwoerter-erstellen.html">Sichere Passwörter erstellen</a></li><li><a href="sprech--und-atemtechniken.html">Sprech- und Atemtechniken</a></li><li><a href="sq3r-methode-fuer-effektives-lesen.html">SQ3R-Methode für effektives Lesen</a></li><li><a href="stressoren-identifizieren.html">Stressoren identifizieren</a></li><li><a href="tagebuchfuehrung-zur-selbstreflexion.html">Tagebuchführung zur Selbstreflexion</a></li><li><a href="tages--und-wochenplanung.html">Tages- und Wochenplanung</a></li><li><a href="umgang-mit-blackouts-in-pruefungen.html">Umgang mit Blackouts in Prüfungen</a></li><li><a href="unterschiedliche-meinungen-aushalten.html">Unterschiedliche Meinungen aushalten</a></li><li><a href="unterstuetzung-annehmen-und-geben.html">Unterstützung annehmen und geben</a></li><li><a href="visualisierung-von-zielen.html">Visualisierung von Zielen</a></li><li><a href="visuelle-hilfsmittel-nutzen.html">Visuelle Hilfsmittel nutzen</a></li><li><a href="was-bewegt-andere.html">Was bewegt andere?</a></li><li><a href="was-ist-wirklich-wichtig.html">Was ist wirklich wichtig?</a></li><li><a href="wertschaetzung-zeigen.html">Wertschätzung zeigen</a></li><li><a href="wichtige-informationen-extrahieren.html">Wichtige Informationen extrahieren</a></li><li><a href="wie-andere-dich-sehen.html">Wie andere dich sehen</a></li><li><a href="zeitdiebe-identifizieren-und-eliminieren.html">Zeitdiebe identifizieren und eliminieren</a></li><li><a href="zeitplan-fuer-die-pruefungsvorbereitung-erstellen.html">Zeitplan für die Prüfungsvorbereitung erstellen</a></li><li><a href="zu-deinem-wort-stehen.html">Zu deinem Wort stehen</a></li><li><a href="zu-deiner-meinung-stehen.html">Zu deiner Meinung stehen</a></li><li><a href="zusammenfassungen-schreiben.html">Zusammenfassungen schreiben</a></li></ul></body></html>
+<h2>Inhaltsverzeichnis</h2><ul>
+<li><a href="5-minuten-regel-kennenlernen.html">5-Minuten-Regel kennenlernen</a></li>
+<li><a href="achtsamkeit-im-alltag-integrieren.html">Achtsamkeit im Alltag integrieren</a></li>
+<li><a href="achtsamkeitsuebungen-kennenlernen.html">Achtsamkeitsübungen kennenlernen</a></li>
+<li><a href="ai-gestuetzte-textueberarbeitung.html">AI-gestützte Textüberarbeitung</a></li>
+<li><a href="aktives-zuhoeren-praktizieren.html">Aktives Zuhören praktizieren</a></li>
+<li><a href="arbeiten-in-kurzen-einheiten.html">Arbeiten in kurzen Einheiten</a></li>
+<li><a href="arbeitsplatz-optimieren.html">Arbeitsplatz optimieren</a></li>
+<li><a href="arbeitszeit-strukturieren.html">Arbeitszeit strukturieren</a></li>
+<li><a href="arbeitszeiten-festlegen-und-einhalten.html">Arbeitszeiten festlegen und einhalten</a></li>
+<li><a href="augenyoga-kennenlernen.html">Augenyoga kennenlernen</a></li>
+<li><a href="auswirkung-von-stress-auf-die-gesundheit.html">Auswirkung von Stress auf die Gesundheit</a></li>
+<li><a href="balance-uebungen-zur-konzentrationssteigerung.html">Balance-Übungen zur Konzentrationssteigerung</a></li>
+<li><a href="bewegung-und-fitness-fuer-den-alltag.html">Bewegung und Fitness für den Alltag</a></li>
+<li><a href="beziehungen-aktiv-gestalten.html">Beziehungen aktiv gestalten</a></li>
+<li><a href="brainstorming-techniken-zur-kreativen-problemloesung.html">Brainstorming-Techniken zur kreativen Problemlösung</a></li>
+<li><a href="chunking-zur-informationsverarbeitung.html">Chunking zur Informationsverarbeitung</a></li>
+<li><a href="cornell-methode-fuer-notizen.html">Cornell-Methode für Notizen</a></li>
+<li><a href="datenschutz-im-internet.html">Datenschutz im Internet</a></li>
+<li><a href="deine-emotionen-zeigen.html">Deine Emotionen zeigen</a></li>
+<li><a href="deine-kraefte-und-zeit-clever-nutzen.html">Deine Kräfte und Zeit clever nutzen</a></li>
+<li><a href="deine-meinung-sagen.html">Deine Meinung sagen</a></li>
+<li><a href="deine-staerken-kennen.html">Deine Stärken kennen</a></li>
+<li><a href="dranbleiben-auch-wenn-es-schwierig-wird.html">Dranbleiben, auch wenn es schwierig wird</a></li>
+<li><a href="echt-sein.html">Echt sein</a></li>
+<li><a href="effiziente-internetrecherche.html">Effiziente Internetrecherche</a></li>
+<li><a href="eisenhower-matrix-anwenden.html">Eisenhower-Matrix anwenden</a></li>
+<li><a href="emotionale-intelligenz-foerdern.html">Emotionale Intelligenz fördern</a></li>
+<li><a href="emotionen-im-griff-haben.html">Emotionen im Griff haben</a></li>
+<li><a href="entscheidungsbaum-zur-loesung-komplexer-probleme.html">Entscheidungsbaum zur Lösung komplexer Probleme</a></li>
+<li><a href="entspannungstechniken-fuer-den-alltag.html">Entspannungstechniken für den Alltag</a></li>
+<li><a href="entspannungsuebungen-vor-pruefungen.html">Entspannungsübungen vor Prüfungen</a></li>
+<li><a href="erfolgsliste-erstellen.html">Erfolgsliste erstellen</a></li>
+<li><a href="ergebnisse-verkaufen.html">Ergebnisse verkaufen</a></li>
+<li><a href="ernaehrung-und-konzentration.html">Ernährung und Konzentration</a></li>
+<li><a href="feedback-empfangen-und-nutzen.html">Feedback empfangen und nutzen</a></li>
+<li><a href="feynman-methode-kennenlernen.html">Feynman-Methode kennenlernen</a></li>
+<li><a href="flexibilitaet-bei-der-aufgabenwahl.html">Flexibilität bei der Aufgabenwahl</a></li>
+<li><a href="freizeitaktivitaeten-zur-erholung.html">Freizeitaktivitäten zur Erholung</a></li>
+<li><a href="gefuehle-anderer-wahrnehmen.html">Gefühle anderer wahrnehmen</a></li>
+<li><a href="gefuehle-in-worte-fassen.html">Gefühle in Worte fassen</a></li>
+<li><a href="gehmeditation-kennenlernen.html">Gehmeditation kennenlernen</a></li>
+<li><a href="gemeinsam-entscheiden.html">Gemeinsam entscheiden</a></li>
+<li><a href="gesunde-ernaehrung-fuer-konzentration.html">Gesunde Ernährung für Konzentration</a></li>
+<li><a href="gewaltfreie-kommunikation-anwenden.html">Gewaltfreie Kommunikation anwenden</a></li>
+<li><a href="gezielte-pausen-einplanen.html">Gezielte Pausen einplanen</a></li>
+<li><a href="grenzen-respektieren.html">Grenzen respektieren</a></li>
+<li><a href="hydration-und-mentale-leistung.html">Hydration und mentale Leistung</a></li>
+<li><a href="inhalte-verstaendlich-strukturieren.html">Inhalte verständlich strukturieren</a></li>
+<li><a href="klein-anfangen-mit-der-10-minuten-regel.html">Klein anfangen mit der 10-Minuten-Regel</a></li>
+<li><a href="konflikte-ansprechen.html">Konflikte ansprechen</a></li>
+<li><a href="konfliktmanagement-im-team.html">Konfliktmanagement im Team</a></li>
+<li><a href="konstruktives-feedback-geben.html">Konstruktives Feedback geben</a></li>
+<li><a href="konzentrationsbooster-im-alltag.html">Konzentrationsbooster im Alltag</a></li>
+<li><a href="konzentrationspausen-richtig-gestalten.html">Konzentrationspausen richtig gestalten</a></li>
+<li><a href="kreative-auszeiten-planen.html">Kreative Auszeiten planen</a></li>
+<li><a href="krisen-gemeinsam-bewaeltigen.html">Krisen gemeinsam bewältigen</a></li>
+<li><a href="kurzentspannungsuebungen-fuer-den-alltag.html">Kurzentspannungsübungen für den Alltag</a></li>
+<li><a href="koerpersprache-verstehen.html">Körpersprache verstehen</a></li>
+<li><a href="lampenfieber-reduzieren.html">Lampenfieber reduzieren</a></li>
+<li><a href="lernstoff-gliedern.html">Lernstoff gliedern</a></li>
+<li><a href="liegende-acht-ueben.html">Liegende Acht üben</a></li>
+<li><a href="loci-methode-als-gedaechtnistechnik.html">Loci-Methode als Gedächtnistechnik</a></li>
+<li><a href="mind-mapping-zur-visualisierung-von-ideen.html">Mind-Mapping zur Visualisierung von Ideen</a></li>
+<li><a href="miteinander-fuehlen.html">Miteinander fühlen</a></li>
+<li><a href="morgenrituale-fuer-mehr-motivation.html">Morgenrituale für mehr Motivation</a></li>
+<li><a href="motivation-durch-vorbilder.html">Motivation durch Vorbilder</a></li>
+<li><a href="muellzeit-reduzieren.html">Müllzeit reduzieren</a></li>
+<li><a href="mutig-neues-ausprobieren.html">Mutig Neues ausprobieren</a></li>
+<li><a href="nein-sagen.html">Nein sagen</a></li>
+<li><a href="neue-ideen-willkommen-heissen.html">Neue Ideen willkommen heissen</a></li>
+<li><a href="nutzung-von-rechtschreibtools.html">Nutzung von Rechtschreibtools</a></li>
+<li><a href="naehe-und-distanz-regulieren.html">Nähe und Distanz regulieren</a></li>
+<li><a href="online-datenbanken-nutzen.html">Online-Datenbanken nutzen</a></li>
+<li><a href="ordnung-halten.html">Ordnung halten</a></li>
+<li><a href="pausen-sinnvoll-einplanen.html">Pausen sinnvoll einplanen</a></li>
+<li><a href="perspektivuebernahme-ueben.html">Perspektivübernahme üben</a></li>
+<li><a href="plan-b-entwickeln-fuer-den-fall-der-faelle.html">Plan B entwickeln für den Fall der Fälle</a></li>
+<li><a href="positive-affirmationen-fuer-die-pruefungsangstbewaeltigung.html">Positive Affirmationen für die Prüfungsangstbewältigung</a></li>
+<li><a href="pqrst-methode-fuer-besseres-textverstaendnis.html">PQRST-Methode für besseres Textverständnis</a></li>
+<li><a href="prioritaeten-setzen-mit-der-abc-analyse.html">Prioritäten setzen mit der ABC-Analyse</a></li>
+<li><a href="pro--und-contra-liste-zur-entscheidungsfindung.html">Pro- und Contra-Liste zur Entscheidungsfindung</a></li>
+<li><a href="progressive-muskelentspannung.html">Progressive Muskelentspannung</a></li>
+<li><a href="pruefungsstrategien-entwickeln.html">Prüfungsstrategien entwickeln</a></li>
+<li><a href="realistische-ziele-setzen.html">Realistische Ziele setzen</a></li>
+<li><a href="regelmaessige-selbstreflexion-praktizieren.html">Regelmässige Selbstreflexion praktizieren</a></li>
+<li><a href="risikomanagement-bei-entscheidungen.html">Risikomanagement bei Entscheidungen</a></li>
+<li><a href="rollenverteilung-im-team.html">Rollenverteilung im Team</a></li>
+<li><a href="rueckwaerts-schreiben-als-konzentrationsuebung.html">Rückwärts schreiben als Konzentrationsübung</a></li>
+<li><a href="scamper-methode-zur-problemloesung.html">SCAMPER-Methode zur Problemlösung</a></li>
+<li><a href="schlafhygiene-verbessern.html">Schlafhygiene verbessern</a></li>
+<li><a href="schnelllesetechniken-kennenlernen.html">Schnelllesetechniken kennenlernen</a></li>
+<li><a href="schwaechen-zeigen.html">Schwächen zeigen</a></li>
+<li><a href="selbstbelohnung-einsetzen.html">Selbstbelohnung einsetzen</a></li>
+<li><a href="selbstbewusst-auftreten.html">Selbstbewusst auftreten</a></li>
+<li><a href="selbstdisziplin-staerken.html">Selbstdisziplin stärken</a></li>
+<li><a href="selbstreflexion-zur-ueberwindung-von-aufschieberitis.html">Selbstreflexion zur Überwindung von Aufschieberitis</a></li>
+<li><a href="sichere-passwoerter-erstellen.html">Sichere Passwörter erstellen</a></li>
+<li><a href="sofort-anfangen-statt-aufschieben.html">Sofort anfangen statt aufschieben</a></li>
+<li><a href="sprech--und-atemtechniken.html">Sprech- und Atemtechniken</a></li>
+<li><a href="sq3r-methode-fuer-effektives-lesen.html">SQ3R-Methode für effektives Lesen</a></li>
+<li><a href="stimmung-und-wohlbefinden-als-konzentrationsfaktoren.html">Stimmung und Wohlbefinden als Konzentrationsfaktoren</a></li>
+<li><a href="stressoren-identifizieren.html">Stressoren identifizieren</a></li>
+<li><a href="tagebuchfuehrung-zur-selbstreflexion.html">Tagebuchführung zur Selbstreflexion</a></li>
+<li><a href="tages--und-wochenplanung.html">Tages- und Wochenplanung</a></li>
+<li><a href="tagesplanung-gegen-aufschieberitis.html">Tagesplanung gegen Aufschieberitis</a></li>
+<li><a href="umgang-mit-blackouts-in-pruefungen.html">Umgang mit Blackouts in Prüfungen</a></li>
+<li><a href="umgang-mit-innerem-widerstand.html">Umgang mit innerem Widerstand</a></li>
+<li><a href="unterschiedliche-meinungen-aushalten.html">Unterschiedliche Meinungen aushalten</a></li>
+<li><a href="unterstuetzung-annehmen-und-geben.html">Unterstützung annehmen und geben</a></li>
+<li><a href="visualisierung-von-zielen.html">Visualisierung von Zielen</a></li>
+<li><a href="visuelle-hilfsmittel-nutzen.html">Visuelle Hilfsmittel nutzen</a></li>
+<li><a href="was-bewegt-andere.html">Was bewegt andere?</a></li>
+<li><a href="was-ist-wirklich-wichtig.html">Was ist wirklich wichtig?</a></li>
+<li><a href="wertschaetzung-zeigen.html">Wertschätzung zeigen</a></li>
+<li><a href="wichtige-informationen-extrahieren.html">Wichtige Informationen extrahieren</a></li>
+<li><a href="wie-andere-dich-sehen.html">Wie andere dich sehen</a></li>
+<li><a href="woop-methode-anwenden.html">WOOP-Methode anwenden</a></li>
+<li><a href="zeitdiebe-identifizieren-und-eliminieren.html">Zeitdiebe identifizieren und eliminieren</a></li>
+<li><a href="zeitplan-fuer-die-pruefungsvorbereitung-erstellen.html">Zeitplan für die Prüfungsvorbereitung erstellen</a></li>
+<li><a href="zielsetzung-mit-smart-methode.html">Zielsetzung mit SMART-Methode</a></li>
+<li><a href="zu-deinem-wort-stehen.html">Zu deinem Wort stehen</a></li>
+<li><a href="zu-deiner-meinung-stehen.html">Zu deiner Meinung stehen</a></li>
+<li><a href="zusammenfassungen-schreiben.html">Zusammenfassungen schreiben</a></li>
+</ul></body></html>
